--- a/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
+++ b/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
@@ -7,7 +7,7 @@ sidebar_label: View Infrastructure Project Runtime
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-This tutorial will show you how to collect runtime data from your cloud provider and make it available to the your final user in Console.
+This tutorial will show you how to collect runtime data from your cloud provider and make it available to your final user in Console.
 
 The tutorial assumes you have the following prerequisites in place:
 
@@ -179,23 +179,34 @@ To do so, you can create a new microservice in your Project starting from the [I
 
 ![Created Integration Connector Agent based microservice in design section](./img/visualize-infra-ica-design-example.png)
 
-Depending on the Cloud Provider you are using, some configurations may differ. In the example below, you can find configuration examples for AWS, GCP, and Azure.
+Now that the Integration Connector Agent microservice is created, we can configure the data pipeline that will be used to process the events coming from the Cloud Provider and save them in the Catalog.
 
-To create the Integration Connector Agent data pipeline, we are going to use the following components:
+The Data Pipeline will be configured using already available Integration Connector Agent components, and it will be defined
+by a specific [source](/runtime_suite/integration-connector-agent/sources/10_overview.md),
+a set of [processors](/runtime_suite/integration-connector-agent/processors/10_overview.md),
+and a [sink](/runtime_suite/integration-connector-agent/sinks/10_overview.md) that handles the data processing.
 
-- vendor-specific source: there are three different sources depending on the Cloud Provider you are using:
-  - `aws-cloudtrail-sqs` for AWS
-  - `gcp-cloud-asset-pubsub` for GCP
-  - `azure-event-hub` for Azure
-  
+![Data Pipeline visualization](./img/visualize-infra-ica-data-pipeline.png)
+
+The components that we will use in the Data Pipeline are:
+
+- Vendor-specific source: there are three different sources depending on the Cloud Provider you are using:
+  - [`aws-cloudtrail-sqs`](/runtime_suite/integration-connector-agent/sources/50_aws_cloudtrail_sqs.md) for AWS
+  - [`gcp-cloud-asset-pubsub`](/runtime_suite/integration-connector-agent/sources/30_gcp_pubsub_asset_inventory.md) for GCP
+  - [`azure-event-hub`](/runtime_suite/integration-connector-agent/sources/40_azure_activity_log_event_hub.md) for Azure
+
   All of them will listen to the events coming from the Cloud Provider and produce events that will be processed by the Integration Connector Agent.
   Additionally, they also provide a webhook that can be used to trigger a full import.
-- `cloud-vendor-aggregator` processor: this processor will aggregate the events coming from the Cloud Provider and produce a single event for each resource
-- `mapper` processor: this processor will map the event produced by the `cloud-vendor-aggregator` processor to the format expected by the Catalog
-- `console-catalog` sink: this sink will save the event in the Catalog, using the `infrastructure-component-runtime` item type
+- [`cloud-vendor-aggregator` processor](/runtime_suite/integration-connector-agent/processors/40_cloud_vendor_aggregator.md):
+this component will aggregate the events coming from the Cloud Provider and produce a single event for each resource
+- [`mapper` processor](/runtime_suite/integration-connector-agent/processors/20_mapper.md): this component will map the event produced by the [`cloud-vendor-aggregator` processor](/runtime_suite/integration-connector-agent/processors/40_cloud_vendor_aggregator.md)
+to a format that complies with the [`infrastructure-component-runtime`](/software-catalog/items-manifest/infrastructure-component-runtime.md) item type in the Catalog.
+- [`console-catalog` sink](/runtime_suite/integration-connector-agent/sinks/15_console-catalog.md): this sink will save the event in the Catalog,
+using the [`infrastructure-component-runtime`](/software-catalog/items-manifest/infrastructure-component-runtime.md) item type
 
-:::note
-We are saving the items using the `infrastructure-component-runtime` item type, which is a specific item type used to store runtime data for infrastructure components.
+:::info
+We are saving the items using the [`infrastructure-component-runtime`](/software-catalog/items-manifest/infrastructure-component-runtime.md) item type,
+which is a specific item type used to store runtime data for infrastructure components.
 
 You can find more information about this item type in the [Catalog documentation](/software-catalog/items-manifest/infrastructure-component-runtime.md).
 :::
@@ -430,7 +441,7 @@ Switch to the Advanced tab and search for the `YOUR_TENANT_ID` placeholder strin
 
 #### Add custom columns
 
-The asset data contained by catalog items contains several information that are solely displayed in a Modal.
+The asset data contained by catalog items contains several pieces of information that are only displayed in a Modal.
 
 You can add custom columns to the table by adding a new field in the `dataSchema` property via the Advanced configuration.
 
@@ -469,7 +480,7 @@ Since we are using the `cloud-vendor-aggregator` Integration Connector Agent Pr
 In certain cases, you may want to enrich the data with additional information, such as information relevant to
 the same infrastructure component but coming from a different tool (e.g. a monitoring tool that provides additional information about the infrastructure component).
 
-In this cases you can build a custom [RPC Processor](/runtime_suite/integration-connector-agent/processors/30_rpc_plugin.md) that will act within the
+In these cases you can build a custom [RPC Processor](/runtime_suite/integration-connector-agent/processors/30_rpc_plugin.md) that will act within the
 Integration Connector Agent data pipeline and enrich the data with additional information.
 
 :::tip
