fix: release notes update with the latest on the assistant

--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -26,12 +26,13 @@ As always, it will continue to be your helpful assistant, explaining concepts an
 
 To discover more, visit the [Mia-Assistant documentation page](/console/assistant/overview.md).
 
-## Pin Mia-Assistant and keep it always available by your side
+## Pin Mia-Assistant for Constant Support
 
-You can now pin the Mia-Assistant chat to keep it open by your side while working in Console.  
-This allows you to interact with AI without interrupting your workflow, making it a constant companion ready to support you throughout your daily tasks!
+You can now pin the Mia-Assistant chat to keep it open while you work in the Console. This allows you to interact with the AI without interrupting your workflow, making it a constant companion ready to support you throughout your daily tasks.
 
 ![Mia-Assistant pinned to the right](img/pinned-assistant.png)
+
+In addition, we have improved the visualization of Mia-Assistant's responses with better spacing and formatting. You can also download the conversation to review it at your leisure.
 
 ## Console
 
