--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -34,6 +34,17 @@ You can now pin the Mia-Assistant chat to keep it open while you work in the Con
 
 In addition, we have improved the visualization of Mia-Assistant's responses with better spacing and formatting. You can also download the conversation to review it at your leisure.
 
+## Custom Item Type Definition Support in the Software Catalog
+
+The Software Catalog now supports the definition and registration of custom item types, extending the system beyond the predefined ones.
+
+![Item Type Definition](img/item-type-definition.png)
+
+Custom items can be cataloged and organized like any other item, making them part of the unified catalog experience. At this stage, these items are not available in the Design section of the Console and cannot be instantiated via the UI. Deployment or instantiation flows must be managed externally.
+This unlocks greater flexibility in modeling and documenting internal tools, components, or processes within a consistent and centralized catalog.
+
+For more details, see the [documentation](/software-catalog/basic-concepts/items-types.md)
+
 ## Console
 
 ### Environment Based Configuration Management as Closed Preview
