--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -43,7 +43,7 @@ The Software Catalog now supports the definition and registration of custom item
 Custom items can be cataloged and organized like any other item, making them part of the unified catalog experience. At this stage, these items are not available in the Design section of the Console and cannot be instantiated via the UI. Deployment or instantiation flows must be managed externally.
 This unlocks greater flexibility in modeling and documenting internal tools, components, or processes within a consistent and centralized catalog.
 
-For more details, see the [documentation](/software-catalog/basic-concepts/items-types.md)
+For more details, see the [documentation](/software-catalog/basic-concepts/10_items-types.md).
 
 ## Console
 
