add mktplace news

--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -83,6 +83,12 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 ### Marketplace Updates
 
+#### Orchestrator Generator Template 1.0.0
+
+The Orchestrator Generator template has been published in the Marketplace.
+
+For usage instructions and setup details, refer to the [official documentation](/console/company-configuration/providers/extensions/orchestrator-generator/overview.md)
+
 #### Integration Connector Agent 0.4.0
 
 The Integration Connector Agent received new updates to enable:
