--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -87,7 +87,7 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 The Orchestrator Generator template has been published in the Marketplace.
 
-For usage instructions and setup details, refer to the [official documentation](/console/company-configuration/providers/extensions/orchestrator-generator/overview.md)
+For usage instructions and setup details, refer to the [official documentation](/console/company-configuration/providers/extensions/orchestrator-generator/overview.mdx)
 
 #### Integration Connector Agent 0.4.0
 
