--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -34,6 +34,17 @@ You can now pin the Mia-Assistant chat to keep it open while you work in the Con
 
 In addition, we have improved the visualization of Mia-Assistant's responses with better spacing and formatting. You can also download the conversation to review it at your leisure.
 
+## Custom Item Type Definition Support in the Software Catalog
+
+The Software Catalog now supports the definition and registration of custom item types, extending the system beyond the predefined ones.
+
+![Item Type Definition](img/item-type-definition.png)
+
+Custom items can be cataloged and organized like any other item, making them part of the unified catalog experience. At this stage, these items are not available in the Design section of the Console and cannot be instantiated via the UI. Deployment or instantiation flows must be managed externally.
+This unlocks greater flexibility in modeling and documenting internal tools, components, or processes within a consistent and centralized catalog.
+
+For more details, see the [documentation](/software-catalog/basic-concepts/10_items-types.md).
+
 ## Console
 
 ### Environment Based Configuration Management as Closed Preview
@@ -72,6 +83,12 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 ### Marketplace Updates
 
+#### Orchestrator Generator Template 1.0.0
+
+The Orchestrator Generator template has been published in the Marketplace.
+
+For usage instructions and setup details, refer to the [official documentation](/console/company-configuration/providers/extensions/orchestrator-generator/overview.mdx)
+
 #### Integration Connector Agent 0.4.0
 
 The Integration Connector Agent received new updates to enable:
@@ -83,4 +100,4 @@ The Integration Connector Agent received new updates to enable:
 To learn more about all the features and how to configure it, visit the [official documentation](/runtime_suite/integration-connector-agent/10_overview.md).
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.0-beta.5`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.0-beta.7`.
