--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -5,16 +5,7 @@ sidebar_label: v14.1.0
 image: "img/release-note-link-preview.png"
 ---
 
-_July 24th, 2025_
-
-:::info
-
-Mia-Platform Console v14.1.0 is **now in Preview** and will be generally available on September 4th.
-
-Console SaaS users can try out v14.1.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_September 4th, 2025_
 
 ## Mia-Assistant gets smarter with real-time Console data via Console MCP Server
 
@@ -44,6 +35,12 @@ Custom items can be cataloged and organized like any other item, making them par
 This unlocks greater flexibility in modeling and documenting internal tools, components, or processes within a consistent and centralized catalog.
 
 For more details, see the [documentation](/software-catalog/basic-concepts/10_items-types.md).
+
+## Download the transcript of conversations with Mia-Assistant
+
+From now on you can export your conversations with Mia-Assistant by simply clicking on a button in the chatbot.
+
+Your conversations will be downloaded in a **.txt** file.
 
 ## Console
 
@@ -100,4 +97,4 @@ The Integration Connector Agent received new updates to enable:
 To learn more about all the features and how to configure it, visit the [official documentation](/runtime_suite/integration-connector-agent/10_overview.md).
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.0-beta.7`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.0`.
