--- a/docs/release-notes/v14.2.0.md
+++ b/docs/release-notes/v14.2.0.md
@@ -16,9 +16,24 @@ Console SaaS users can try out v14.2.0 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## Describe & Apply via miactl
+## Manage Projects locally with `miactl` (new Describe & Apply commands)
 
-## 
+It is now possible to **manage your Project configurations locally** using our `miactl` CLI.  
+With the new `miactl project describe` and `miactl project apply` commands, you can export the configuration of a Project, edit it on your machine, and then apply it back to update the Project.  
+
+This enables new workflows such as troubleshooting misconfigurations, migrating Projects between Companies, creating reusable templates, or leveraging AI tools to refine configurations.  
+
+For detailed usage examples, please refer to the [documentation](/development_suite/api-console/api-design/miactl-commands.md).
+
+## New Webhook event: Tag Deleted
+
+A new webhook event is now available: **`Tag Deleted`**.  
+This event is fired whenever a tag/version is deleted, allowing you to trigger custom automations or integrations in response.
+
+## Redeploy a configuration from Deploy History
+
+It is now possible to **redeploy a previously deployed configuration** directly from the **Deploy History**.  
+From the Deploy area, in the Deploy History section, simply click the rocket icon in the table of the deployments to trigger a new deploy of that specific configuration.
 
 ## Console
 
