--- a/docs/release-notes/v14.2.0.md
+++ b/docs/release-notes/v14.2.0.md
@@ -39,6 +39,11 @@ From the Deploy area, in the Deploy History section, simply click the rocket ico
 
 ### Improvements
 
+#### Project list improved with table view
+
+The **Project list** is now displayed in a **table view** instead of cards.  
+This change improves performance, simplifies search, and makes navigation in Console more efficient when working with multiple Projects.
+
 ## Marketplace
 
 ### Marketplace Updates
