--- a/docs/release-notes/v14.2.0.md
+++ b/docs/release-notes/v14.2.0.md
@@ -54,4 +54,4 @@ This change improves performance, simplifies search, and makes navigation in Con
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vX.X.X`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.1-beta.0`.
