--- a/docs/release-notes/v14.2.1.md
+++ b/docs/release-notes/v14.2.1.md
@@ -16,13 +16,15 @@ Console SaaS users can try out v14.2.1 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## 
+## Export PDF
+
+## New Microservice experience as a Feature Preview
 
 ## Console
 
 ### Improvements
 
-#### 
+#### Project Status on project list
 
 ## How to update your Console
 
