--- a/docs/release-notes/v14.2.1.md
+++ b/docs/release-notes/v14.2.1.md
@@ -20,11 +20,25 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## New Microservice experience as a Feature Preview
 
+We’ve introduced a **new tabular view** for Microservices, designed to make navigation between resources more intuitive.  
+From this view, you can quickly see any **related endpoints**, mark Microservices as **favorites**, add **multiple custom tags**, and then filter by them to better organize your workflows.
+
+You can enable this new experience from the Feature Preview tab on the Settings section of your Project.   
+
+## Export conversations with Mia-Assistant in PDF format
+
+Conversations with **Mia-Assistant** can now be exported also in **PDF format**, in addition to the traditional `.txt`.  
+You only need to click on the format you prefer from the download button available on the top of the Mia-Assistant chatbot.  
+This makes it easier to choose the better option to archive, share, and review your assistant interactions whenever you need.  
+
 ## Console
 
 ### Improvements
 
-#### Project Status on project list
+#### Improved visibility of production environments status  
+
+We’ve enhanced the way production environment information is displayed on the new Projects list: the **status of each production environment** is now directly visible from the **Projects table**.  
+This gives you an immediate overview of any issues or confirmations about the health of your projects when looking at your Company's projects.
 
 ## How to update your Console
 
