--- a/docs/release-notes/v14.2.1.md
+++ b/docs/release-notes/v14.2.1.md
@@ -16,8 +16,6 @@ Console SaaS users can try out v14.2.1 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## Export PDF
-
 ## New Microservice experience as a Feature Preview
 
 We’ve introduced a **new tabular view** for Microservices, designed to make navigation between resources more intuitive.  
@@ -38,7 +36,7 @@ This makes it easier to choose the better option to archive, share, and review y
 #### Improved visibility of production environments status  
 
 We’ve enhanced the way production environment information is displayed on the new Projects list: the **status of each production environment** is now directly visible from the **Projects table**.  
-This gives you an immediate overview of any issues or confirmations about the health of your projects when looking at your Company's projects.
+This gives you an immediate overview of any issues or confirmations about the health of your produciton environments when looking at your Company's projects.
 
 ## How to update your Console
 
