--- a/docs/release-notes/v14.2.1.md
+++ b/docs/release-notes/v14.2.1.md
@@ -38,6 +38,20 @@ This makes it easier to choose the better option to archive, share, and review y
 We’ve enhanced the way production environment information is displayed on the new Projects list: the **status of each production environment** is now directly visible from the **Projects table**.  
 This gives you an immediate overview of any issues or confirmations about the health of your produciton environments when looking at your Company's projects.
 
+## Fast Data
+
+### Fast Data Services
+
+#### Single View Trigger Generator
+
+The new version `v3.5.0` of the _Single View Trigger Generator_ is available!
+
+##### Fixed
+
+- The service now correctly supports the `null` condition in ER-Schema. Previously, such condition, if present in the ER-Schema, would cause an error when loading a strategy.
+
+For more information check out the service [changelog](/runtime_suite/single-view-trigger-generator/changelog.md).
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vX.X.X-beta.0`.
