added image on rn

--- a/docs/release-notes/v14.2.1.md
+++ b/docs/release-notes/v14.2.1.md
@@ -21,7 +21,9 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 We’ve introduced a **new tabular view** for Microservices, designed to make navigation between resources more intuitive.  
 From this view, you can quickly see any **related endpoints**, mark Microservices as **favorites**, add **multiple custom tags**, and then filter by them to better organize your workflows.
 
-You can enable this new experience from the Feature Preview tab on the Settings section of your Project.   
+You can enable this new experience from the Feature Preview tab on the Settings section of your Project.  
+
+![Microservice table](img/microservice-table.png)
 
 ## Export conversations with Mia-Assistant in PDF format
 
@@ -35,7 +37,7 @@ This makes it easier to choose the better option to archive, share, and review y
 
 #### Improved visibility of production environments status  
 
-We’ve enhanced the way production environment information is displayed on the new Projects list: the **status of each production environment** is now directly visible from the **Projects table**.  
+We’ve enhanced the way production environment information is displayed on the new Projects list: the **status of your production environment** is now directly visible from the **Projects table**.  
 This gives you an immediate overview of any issues or confirmations about the health of your produciton environments when looking at your Company's projects.
 
 ## Fast Data
