--- a/docs/release-notes/v14.2.1.md
+++ b/docs/release-notes/v14.2.1.md
@@ -38,7 +38,7 @@ This makes it easier to choose the better option to archive, share, and review y
 #### Improved visibility of production environments status  
 
 We’ve enhanced the way production environment information is displayed on the new Projects list: the **status of your production environment** is now directly visible from the **Projects table**.  
-This gives you an immediate overview of any issues or confirmations about the health of your produciton environments when looking at your Company's projects.
+This gives you an immediate overview of any issues or confirmations about the health of your production environments when looking at your Company's Projects.
 
 ## Fast Data
 
