--- a/docs/release-notes/v14.2.1.md
+++ b/docs/release-notes/v14.2.1.md
@@ -56,4 +56,4 @@ For more information check out the service [changelog](/runtime-components/plugi
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vX.X.X-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.2-beta.0`.
