--- a/docs/getting-started/test-roadmap.mdx
+++ b/docs/getting-started/test-roadmap.mdx
@@ -4,8 +4,8 @@ title: Test Roadmap
 sidebar_label: Test
 ---
 
-import Accordion from '../../src/components/Accordion/index.js'
-import dataRoadmap from '../../src/components/Accordion/dataRoadmap.json';
+import Accordion from '../../src/components/Accordion/index.js';
+import dataRoadmap from '../../src/config/dataRoadmap.json';
 
 
 ### TST
