update test documents

--- a/docs/getting-started/test-roadmap.mdx
+++ b/docs/getting-started/test-roadmap.mdx
@@ -8,9 +8,7 @@ import Accordion from '@site/src/components/Accordion/index.js';
 import dataRoadmap from '@site/src/config/dataRoadmap.json';
 
 
-### TST
-
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+### TEST
 
 
 <Accordion data={dataRoadmap} />
