--- a/docs/getting-started/test-versions.mdx
+++ b/docs/getting-started/test-versions.mdx
@@ -8,9 +8,7 @@ import Accordion from '../../src/components/Accordion/index.js'
 import dataVersions from '../../src/config/dataVersions.json';
 
 
-### TST
-
-Questa vista è ideale per le note di rilascio, dove si desidera separare chiaramente le nuove funzionalità, i miglioramenti e le correzioni di bug.
+### TEST
 
 
 <Accordion data={dataVersions} />
