--- a/docs/release-notes/v14.2.1.md
+++ b/docs/release-notes/v14.2.1.md
@@ -5,16 +5,7 @@ sidebar_label: v14.2.1
 image: "img/release-note-link-preview.png"
 ---
 
-_September 18th, 2025_
-
-:::info
-
-Mia-Platform Console v14.2.1 is **now in Preview** and will be generally available on September 18th.
-
-Console SaaS users can try out v14.2.1 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_October 2nd, 2025_
 
 ## New Microservice experience as a Feature Preview
 
@@ -56,4 +47,4 @@ For more information check out the service [changelog](/runtime-components/plugi
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.2-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.2`.
