--- a/docs/release-notes/v14.3.0.md
+++ b/docs/release-notes/v14.3.0.md
@@ -16,11 +16,13 @@ Console SaaS users can try out v14.3.0 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## 
-
 ## Console
 
 ### Improvements
+
+#### Added Support for the OPTIONS Verb on Endpoints' Routes
+
+You can now add a new route using the OPTIONS verb directly from your Endpoint's detail page. 
 
 ## Fast Data
 
