--- a/docs/release-notes/v14.3.0.md
+++ b/docs/release-notes/v14.3.0.md
@@ -24,6 +24,10 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 You can now add a new route using the OPTIONS verb directly from your Endpoint's detail page. 
 
+#### More insights on production environments from the Projects table
+
+We've enriched the Projects list to provide quick access to key production metrics. Now, by simply hovering over a tooltip near the production environment's name, you can instantly see its last deploy time, along with its current CPU and memory usage. This enhancement gives you a faster and easier way to monitor the health and status of your production environments directly from the Projects table.
+
 ## Fast Data
 
 ### Fast Data Services
